Fixed the .feature margin on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -793,7 +793,7 @@ a {
 
 .feature {
   gap: 4rem 2rem;
-  margin: 12rem;
+  margin: 2rem;
 }
 
 .feature:first-of-type {
